Update 02-understanding-stages.yml for Azure Pipelines

--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -24,18 +24,20 @@ stages:
     - bash: echo $(environment)DeployJob
 - stage: QADeploy
   variables:
-    environment: Dev
+    environment: QA
   dependsOn: Build
   jobs:
   - job: QADeployJob
     steps:
     - bash: echo $(environment)DeployJob
 - stage: ProdDeploy
+  variables:
+    environment: Prod
   dependsOn: 
   - DevDeploy
   - QADeploy
   jobs:
   - job: ProdDeployJob
     steps:
-    - bash: echo ProdDeployJob
+    - bash: echo $(environment)DeployJob
 
