Update 03-playing-with-environment-deployment.yml for Azure Pipelines

--- a/03-playing-with-environment-deployment.yml
+++ b/03-playing-with-environment-deployment.yml
@@ -19,7 +19,7 @@ stages:
     - bash: echo "Do the Build"
 - stage: DevDeploy
   jobs:
-  - deployment: DevDeployJob
+  - deployment: QADeployJob
     environment: Dev
     strategy:
       runOnce:
